--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,10 +1,10 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
+  name        : "David Jenkins"
   uri         : "http://name.com"
-  email       : "name@name.com"
-  bio         : "This is the first name."
+  email       : "jenkins.david34@icloud.com"
+  bio         : "David"
   avatar      : "bio-photo-2.jpg"
   twitter     : "name"
   google_plus : "Name"
