--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -10,9 +10,9 @@ Name Name:
   google_plus : "Name"
 
 Name2 Name2:
-  name        : "Name2 Name2"
-  email       : "name2@name2.com"
-  bio         : "I ordered what?"
-  avatar      : "bio-photo.jpg"
+  name        : "David Jenkins"
+  email       : "jenkins.daivd34@icloud.com"
+  bio         : "I am a data-driven bilingual professional..."
+  avatar      : "profile.png"
   twitter     : "name2"
   google_plus : "Name"
