--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "zekejenkins/davidjenkins.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "1729996945115.jpeg"
   name             : "David Jenkins"
   pronouns         : "He/Him/His" 
   bio              : "Data-drive bilingual professional.."
