--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "David Jenkins Portfolio"
+title                    : "David Jenkins"
 title_separator          : "-"
 name                     : &name "David Jenkins"
 description              : &description "Data-drive bilingual professional..."
