--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,9 +6,9 @@
 
 main:
   - title: "Resume"
-    url: /resume/
+    url: resume/
 
   - title: "Portfolio"
-    url: /Portfolio/    
+    url: portfolio/    
 
  
