--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,6 +9,9 @@ main:
     url: resume/
 
   - title: "Portfolio"
-    url: portfolio/    
+    url: portfolio/  
+
+  - title: "Skills"
+    url: skills/  
 
  
