--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,9 +1,21 @@
-- title: "Project 1"
-  description: "A brief description of Project 1."
-  url: "https://github.com/zekejenkins/project1"
-  image: "/assets/images/project1-thumbnail.jpg"
+- title: "Automated Report Generator"
+  description: "Automates report generation using Python and Excel."
+  skills:
+    - Python
+    - Excel
+    - AutoHotkey
+  url: "https://github.com/zekejenkins/automated-report-generator"
 
-- title: "Project 2"
-  description: "A brief description of Project 2."
-  url: "https://github.com/zekejenkins/project2"
-  image: "/assets/images/project2-thumbnail.jpg"
+- title: "Web App for Data Visualization"
+  description: "A web-based tool for visualizing data using JavaScript and HTML/CSS."
+  skills:
+    - JavaScript
+    - HTML
+    - CSS
+  url: "https://github.com/zekejenkins/web-data-viz"
+
+- title: "Keyboard Shortcuts Automation"
+  description: "Custom AutoHotkey scripts to optimize workflows."
+  skills:
+    - AutoHotkey
+  url: "https://github.com/zekejenkins/keyboard-shortcuts-automation"
