--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "David Jenkins"
 title_separator          : "-"
 name                     : &name "David Jenkins"
 description              : &description "Data-drive bilingual professional..."
-url                      : https://zekejenkins.github.io/davidjenkins/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : https://zekejenkins.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "/davidjenkins" # the subpath of your site, e.g. "/blog"
 repository               : "zekejenkins/davidjenkins.github.io"
 
