--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,12 +6,12 @@
 
 main:
   - title: "Resume"
-    url: resume/
+    url: /resume/
 
   - title: "Portfolio"
-    url: portfolio/  
+    url: /portfolio/  
 
   - title: "Skills"
-    url: skills/  
+    url: /skills/  
 
  
