--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -18,4 +18,5 @@
   description: "Custom AutoHotkey scripts to optimize workflows."
   skills:
     - AutoHotkey
+    - Excel
   url: "https://github.com/zekejenkins/keyboard-shortcuts-automation"
