--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -4,6 +4,8 @@
     - Python
     - Excel
     - AutoHotkey
+    - SQL
+    - HTML
   url: "https://github.com/zekejenkins/automated-report-generator"
 
 - title: "Web App for Data Visualization"
