--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -6,6 +6,7 @@
     - AutoHotkey
     - SQL
     - HTML
+    - JavaScript
   url: "https://github.com/zekejenkins/automated-report-generator"
 
 - title: "Web App for Data Visualization"
