--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -36,3 +36,15 @@
   skills:
     - Excel
   url: "/davidjenkins/projects/superstore_analysis/"
+  
+- title: "Automated PDF Data Extraction and Analysis"
+  description: "Automated process for extracting financial data from over 36,000 PDF account statements and consolidating it into Excel for advanced analysis."
+  skills:
+    - Python
+    - PyMuPDF (fitz)
+    - pandas
+    - Excel
+    - Regular Expressions (Regex)
+  url: "/projects/pdf_data_extraction/"
+
+  
